add new features info

--- a/atalk/index.html
+++ b/atalk/index.html
@@ -44,18 +44,22 @@
 
 		<div class="shadow">
 			<p align="center">
+          <a href="https://github.com/cmeng-git/atalk-android">
+            <img src="img/logo_atalk.png" alt="atalk" align="inline" width="7%" style="margin:5px 30px 20px 0px"/>
+          </a>
           <a href="https://f-droid.org/en/packages/org.atalk.android/">
-            <img src="img/fdroid-logo.png" alt="F-Droid">nbsp;
+            <img src="img/fdroid-logo.png" alt="F-Droid" align="inline" width="18%" style="margin:5px 30px 20px 0px"/>
           </a>
 			    <a href="https://play.google.com/store/apps/details?id=org.atalk.android&hl=en">
-			        <img src="img/google_play.png" alt="Google PlayStore">nbsp;
+            <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="18%" style="margin:5px 30px 20px 0px"/>
 			    </a>
-				<a href="https://www.youtube.com/watch?v=9w5WwphzgBc" class="fancybox animated wow flipInX" data-wow-duration="2s">
-					<img src="img/youtube.png" alt="YouTube">
+				  <a href="https://youtu.be/9w5WwphzgBc">
+            <img src="img/youtube.png" alt="YouTube" align="inline" width="9%" style="margin:5px 30px 20px 0px"/>
 				</a>
 			</p>
 		</div>
-	</section><!--  End billboard  -->
+	</section>
+	<!--  End billboard  -->
 
 	<div class="feature dark">
     <h2>Features</h2>
