--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -43,15 +43,15 @@
 
 		<div class="shadow">
 			<p align="center">
-          <a href="https://github.com/cmeng-git/hymnchtv">
-            <img src="img/hymnchtv.png" alt="HymnchTv" align="inline" width="8%" style="margin:5px 30px 20px 0px"/>
-          </a>
-			    <a href="https://play.google.com/store/apps/details?id=org.cog.hymnchtv&hl=en">
-            <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="20%" style="margin:5px 30px 20px 0px"/>
-			    </a>
-				<a href="https://youtu.be/D8FKFfcUxPw" class="fancybox animated wow flipInX" data-wow-duration="2s">
-            <img src="img/youtube.png" alt="YouTube" align="inline" width="10%" style="margin:5px 30px 20px 0px"/>
-				</a>
+        <a href="https://github.com/cmeng-git/hymnchtv">
+          <img src="img/hymnchtv.png" alt="HymnchTv" align="inline" width="8%" style="margin:5px 30px 20px 0px"/>
+        </a>
+  	    <a href="https://play.google.com/store/apps/details?id=org.cog.hymnchtv&hl=en">
+          <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="20%" style="margin:5px 30px 20px 0px"/>
+        </a>
+		    <a href="https://youtu.be/D8FKFfcUxPw" class="fancybox animated wow flipInX" data-wow-duration="2s">
+          <img src="img/youtube.png" alt="YouTube" align="inline" width="10%" style="margin:5px 30px 20px 0px"/>
+		    </a>
 			</p>
 		</div>
 	</section>
@@ -62,7 +62,7 @@
     <h3>书拉密女小站-诗歌本: 为安卓设计的赞美诗歌词页面浏览器,查看和播放器</h3>
     <ul>
       <li>使用最新的 Android Fragment Pager Adapter 进行平滑滚动更顺畅</li>
-      <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，和"拼音索引"</li>
+      <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
       <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
       <li>最大搜索增加到100项，显示匹配结果的4行完整诗词句</li>
       <li>长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
@@ -76,6 +76,7 @@
       <li>诗歌媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
       <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
       <li>用户可选的主界面背景图片，字体大小和字体颜色</li>
+      <li>在线英文歌词显示</li>
       <li>自动检查版本更新，并通知用户任何新的更新以采取措施</li>   
 	</ul>
 	</div>
@@ -93,7 +94,8 @@
 					<h2>书拉密女诗歌本应用程序主用户界面</h2>
 					<div class="media">
           <image src="./img/01.hymnchtv_main.png"/>
-						<p>用户诗歌选择可以使用诗歌编号，目录或内容搜索输入.诗歌编号：输入(附)号码<br/>后按大本,补充,新颂或儿诗</p>
+						<p>用户诗歌选择可以使用诗歌编号，目录选项或简体中文内容搜索输入。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。
+						<br/>诗歌编号：输入(附)号码后按大本，补充，新颂或儿诗。</p>
 					</div>					
 				</li>
 
@@ -101,7 +103,7 @@
 					<h2>用户选择的诗歌曲媒体播放中</h2>
 					<div class="media">
           <image src="./img/02.hymnchtv_hymn_play.png"/>
-						<p>诗歌内容显示和播放：选择播放类型，然后按播放钮。重复点播放钮；播放暂停，或从暂停位置继续播放。长按播放钮后，可再次从头开始播放。用户可选播放重复和速度选项。
+						<p>诗歌内容显示和播放：选择媒体播放类型，然后按播放钮。重复点播放钮；播放暂停，或从暂停位置继续播放。长按播放钮后，可再次从头开始播放或更换媒体播放类型。用户可选播放重复和速度选项。</p>
 					</div>
 				</li>
 
@@ -109,7 +111,7 @@
 					<h2>正在下载用户选择的诗歌媒体内容</h2>
 					<div class="media">
           <image src="./img/03.hymnchtv_hymn_download.png"/>
-						<p>诗歌播放：如果没有可用的本地媒体内容，则应用会自动将所需的媒体从网站上下载。下载媒体后自动开始播放。如果用户单击“取消”，下载将在后台完成。</p>
+						<p>诗歌播放：如果没有可用的本地媒体内容，则应用会自动将所需的媒体从网站上下载并保存到本地存储。下载媒体后自动开始播放。如果用户单击“取消”，下载将在后台完成。</p>
 					</div>					
 				</li>
 
@@ -117,7 +119,7 @@
 					<h2>用户诗歌目录类别索引选项界面</h2>
 					<div class="media">
           <image src="./img/04.hymnchtv_main_toc.png"/>
-						<p>用户可用诗歌目录选择："诗歌类别"，"笔画索引"，和"拼音索引"；后按大本,补充,新颂或儿诗进入</p>
+						<p>用户可用诗歌目录选择："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"；后按大本,补充,新颂或儿诗进入</p>
 					</div>
 				</li>
 				
@@ -125,7 +127,7 @@
 					<h2>用户诗歌目录选项-诗歌类别</h2>
 					<div class="media">
           <image src="./img/05.hymnchtv_toc_category.png"/>
-						<p>诗歌目录选择─"诗歌类别"。按选择目录，然后选择歌曲标题进入。</p>
+						<p>诗歌目录选择─"诗歌类别"。按选择诗歌类别选项，然后选择歌曲标题进入。</p>
 					</div>
 				</li>
 
@@ -146,25 +148,49 @@
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay="0.7s">
+					<h2>用户诗歌目录选项-英中对照</h2>
+					<div class="media">
+          <image src="./img/08.hymnchtv_toc_eng2ch.png"/>
+						<p>诗歌目录选择─"英中对照"。按所需诗歌编号范围，然后选择英文歌曲编号进入。</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.7s">
 					<h2>用户诗歌内容搜索结果显示</h2>
 					<div class="media">
-          <image src="./img/08.hymnchtv_content_search.png"/>
-						<p>诗歌内容搜索显示4行完整诗词句。最多搜索项目100项。选择搜索找到之一项目进入。</p>
+          <image src="./img/09.hymnchtv_content_search.png"/>
+						<p>诗歌内容搜索显示4行完整诗词句。最多搜索项目100项。选择搜索找到之一项目进入。注：仅支持简体中文输入搜索。</p>
 					</div>
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户选择诗歌乐谱和歌词文本中显示</h2>
 					<div class="media">
-          <image src="./img/09.hymnchtv_lyrics_text.png"/>
+          <image src="./img/10.hymnchtv_lyrics_text.png"/>
 						<p>诗歌乐谱和歌词文本显示。向上下滚动以阅读内容。手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，自动加大1.5倍易于阅读。</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>书拉密女诗歌弹出上下文菜单</h2>
+					<div class="media">
+          <image src="./img/11.hymnchtv_context_menu.png"/>
+						<p>长按诗歌显示画面弹出上下文菜单选项：默认显示/隐藏播放条，显示/隐藏播放条；或[英文歌词]选项，如有相关的英文词歌文本。手机横向模式时，媒体播放器界面自动隐藏</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>用户选择诗歌其英文词歌文本显示</h2>
+					<div class="media">
+          <image src="./img/12.hymnchtv_lyrics_english.png"/>
+						<p>长按诗歌显示画面弹出上下文菜单选项；然后选择[英文歌词]选项（如果有）；则应用会自动访问在线相关的英文词歌文本。使用[返回键]返回上一屏幕</p>
 					</div>
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>关于书拉密女诗歌应用程序</h2>
 					<div class="media">
-          <image src="./img/10.hymnchtv_about.png"/>
+          <image src="./img/13.hymnchtv_about.png"/>
 						<p>关于书拉密女诗歌程序界面。选择历史记录以查看应用程序发布记录日志</p>
 					</div>
 				</li>
@@ -172,16 +198,8 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>书拉密女诗歌应用程序主菜单选项</h2>
 					<div class="media">
-          <image src="./img/11.hymnchtv_option_menu.png"/>
+          <image src="./img/14.hymnchtv_option_menu.png"/>
 						<p>用户可选的主菜单选项包括墙纸，字体大小，字体颜色，访问网上帮助以及关于书拉密女诗歌应用程序</p>
-					</div>
-				</li>
-
-				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
-					<h2>书拉密女诗歌弹出上下文菜单</h2>
-					<div class="media">
-          <image src="./img/12.hymnchtv_context_menu.png"/>
-						<p>长按诗歌显示画面弹出上下文菜单选项：显示/隐藏播放条或默认显示/隐藏播放条。手机横向模式时，媒体播放器界面自动隐藏</p>
 					</div>
 				</li>
 
