create hymnchtv faq page

--- a/atalk/faq.html
+++ b/atalk/faq.html
@@ -82,7 +82,7 @@ ul li {
 
    <div class='innerText'>This FAQ section is created to provide a better understanding
       to aTalk users on the application features and observed behaviour. This section
-      will continuously be updated as more inputs are feedback from aTalk users.
+      will continuously be updated as inputs are feedback from aTalk users.
    </div>
    <!-- ====================== accordion Content =================== -->
 
