--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -64,12 +64,18 @@
       <li>使用最新的 Android Fragment Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
       <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
-      <li>最大搜索增加到100项，显示匹配结果的4行完整诗词句</li>
+      <li>最大搜索为100项，显示匹配结果的4行完整诗词句</li>
       <li>长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
       <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
       <li>手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，显示自动加大150%，易于阅读</li>
-      <li>开发新的媒体播放器用户界面。给用户最大的控制权</li>
-      <li>媒体播放类别：midi，伴奏，教唱，唱诗</li>
+      <li>媒体播放类别：用户定义媒体，伴奏，教唱，唱诗</li>
+      <li>用户定义媒体内容的支持，即每个诗歌标题的视频和音频以进行播放</li>
+      <li>支持安卓共享以添加媒体内容，或来自第三方应用程序的网址链接作为用户定义的媒体内容</li>
+      <li>允许导出保存中的用户定义媒体内容，以通过导入与其他安卓设备共享</li>
+      <li>根据存储在预定义目录中的媒体内容文件自动创建导出文件；用于包含在用户定义的媒体中以进行播放</li>
+      <li>支持用户定义的媒体列表查看器和嵌入式文本编辑器，以简化导出和导入用户定义的媒体操作</li>
+      <li>包括嵌入式视频媒体播放器，用于播放用户定义的视频媒体和其他优酷网址</li>
+      <li>开发新的音频媒体播放器用户界面。给用户最大的控制权</li>
       <li>可调媒体播放速度：0.7x〜1.3x；和可选重复次数播放</li>
       <li>网络媒体下载仅一次；内部存储，供以后播放</li>
       <li>媒体播放同步于用户新选诗歌编号，无需返回主页</li>
@@ -78,6 +84,7 @@
       <li>用户可选的主界面背景图片，字体大小和字体颜色</li>
       <li>在线英文歌词显示</li>
       <li>自动检查版本更新，并通知用户任何新的更新以采取措施</li>   
+      <li>请检阅 <a style="color:blue"; href='./faq.html'>诗歌本新应用程序功能</a></li>
 	</ul>
 	</div>
 	
@@ -93,7 +100,7 @@
 				<li class="animated wow fadeInDown">
 					<h2>书拉密女诗歌本应用程序主用户界面</h2>
 					<div class="media">
-          <image src="./img/01.hymnchtv_main.png"/>
+            <image src="./img/01.hymnchtv_main.png"/>
 						<p>用户诗歌选择可以使用诗歌编号，目录选项或简体中文内容搜索输入。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。
 						<br/>诗歌编号：输入(附)号码后按大本，补充，新颂或儿诗。</p>
 					</div>					
@@ -102,7 +109,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay=".2s">
 					<h2>用户选择的诗歌曲媒体播放中</h2>
 					<div class="media">
-          <image src="./img/02.hymnchtv_hymn_play.png"/>
+            <image src="./img/02.hymnchtv_hymn_play.png"/>
 						<p>诗歌内容显示和播放：选择媒体播放类型，然后按播放钮。重复点播放钮；播放暂停，或从暂停位置继续播放。长按播放钮后，可再次从头开始播放或更换媒体播放类型。用户可选播放重复和速度选项。</p>
 					</div>
 				</li>
@@ -110,23 +117,23 @@
 				<li class="animated wow fadeInDown" data-wow-delay=".1s">
 					<h2>正在下载用户选择的诗歌媒体内容</h2>
 					<div class="media">
-          <image src="./img/03.hymnchtv_hymn_download.png"/>
-						<p>诗歌播放：如果没有可用的本地媒体内容，则应用会自动将所需的媒体从网站上下载并保存到本地存储。下载媒体后自动开始播放。如果用户单击“取消”，下载将在后台完成。</p>
+            <image src="./img/03.hymnchtv_hymn_download.png"/>
+						<p>诗歌播放：如果没有可用的本地媒体内容，则应用会自动将所需的媒体从网站上下载并保存到本地存储。下载媒体后自动开始播放。如果用户单击“取消”，下载将在后台完成。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0050'>应用程序</a></p>
 					</div>					
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay=".3s">
 					<h2>用户诗歌目录类别索引选项界面</h2>
 					<div class="media">
-          <image src="./img/04.hymnchtv_main_toc.png"/>
-						<p>用户可用诗歌目录选择："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"；后按大本,补充,新颂或儿诗进入</p>
+            <image src="./img/04.hymnchtv_main_toc.png"/>
+						<p>用户可用诗歌目录选择："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"；后按大本,补充,新颂或儿诗进入。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0020'>应用程序</a></p>
 					</div>
 				</li>
 				
 				<li class="animated wow fadeInDown" data-wow-delay=".4s">
 					<h2>用户诗歌目录选项-诗歌类别</h2>
 					<div class="media">
-          <image src="./img/05.hymnchtv_toc_category.png"/>
+            <image src="./img/05.hymnchtv_toc_category.png"/>
 						<p>诗歌目录选择─"诗歌类别"。按选择诗歌类别选项，然后选择歌曲标题进入。</p>
 					</div>
 				</li>
@@ -134,7 +141,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.5s">
 					<h2>用户诗歌目录选项-笔画索引</h2>
 					<div class="media">
-          <image src="./img/06.hymnchtv_toc_strokes.png"/>
+            <image src="./img/06.hymnchtv_toc_strokes.png"/>
 						<p>诗歌目录选择─"笔画索引"。按选择首字笔画，然后选择歌曲标题进入。</p>
 					</div>					
 				</li>
@@ -142,7 +149,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.6s">
 					<h2>用户诗歌目录选项-拼音索引</h2>
 					<div class="media">
-          <image src="./img/07.hymnchtv_toc_pinyin.png"/>
+            <image src="./img/07.hymnchtv_toc_pinyin.png"/>
 						<p>诗歌目录选择─"拼音索引"。按选择首字拼音，然后选择歌曲标题进入。</p>
 					</div>
 				</li>
@@ -150,7 +157,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.7s">
 					<h2>用户诗歌目录选项-英中对照</h2>
 					<div class="media">
-          <image src="./img/08.hymnchtv_toc_eng2ch.png"/>
+            <image src="./img/08.hymnchtv_toc_eng2ch.png"/>
 						<p>诗歌目录选择─"英中对照"。按所需诗歌编号范围，然后选择英文歌曲编号进入。</p>
 					</div>
 				</li>
@@ -158,7 +165,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.7s">
 					<h2>用户诗歌内容搜索结果显示</h2>
 					<div class="media">
-          <image src="./img/09.hymnchtv_content_search.png"/>
+            <image src="./img/09.hymnchtv_content_search.png"/>
 						<p>诗歌内容搜索显示4行完整诗词句。最多搜索项目100项。选择搜索找到之一项目进入。注：仅支持简体中文输入搜索。</p>
 					</div>
 				</li>
@@ -166,7 +173,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户选择诗歌乐谱和歌词文本中显示</h2>
 					<div class="media">
-          <image src="./img/10.hymnchtv_lyrics_text.png"/>
+            <image src="./img/10.hymnchtv_lyrics_text.png"/>
 						<p>诗歌乐谱和歌词文本显示。向上下滚动以阅读内容。手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，自动加大1.5倍易于阅读。</p>
 					</div>
 				</li>
@@ -174,23 +181,47 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>书拉密女诗歌弹出上下文菜单</h2>
 					<div class="media">
-          <image src="./img/11.hymnchtv_context_menu.png"/>
-						<p>长按诗歌显示画面弹出上下文菜单选项：默认显示/隐藏播放条，显示/隐藏播放条；或[英文歌词]选项，如有相关的英文词歌文本。手机横向模式时，媒体播放器界面自动隐藏</p>
+            <image src="./img/11.hymnchtv_context_menu.png"/>
+						<p>长按诗歌显示画面弹出上下文菜单选项：默认显示/隐藏播放条，显示/隐藏播放条；或[英文歌词]选项，如有相关的英文词歌文本。手机横向模式时，媒体播放器界面自动隐藏。<a style="color:blue"; href='./faq.html#hymnch_0040'>应用程序</a></p>
 					</div>
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户选择诗歌其英文词歌文本显示</h2>
 					<div class="media">
-          <image src="./img/12.hymnchtv_lyrics_english.png"/>
+            <image src="./img/12.hymnchtv_lyrics_english.png"/>
 						<p>长按诗歌显示画面弹出上下文菜单选项；然后选择[英文歌词]选项（如果有）；则应用会自动访问在线相关的英文词歌文本。使用[返回键]返回上一屏幕</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>用户定义媒体设置用户界面</h2>
+					<div class="media">
+            <image src="./img/hymnchtv_media_config.png"/>
+						<p>支持对用户定义媒体内容，即每个诗歌标题的视频和音频以进行播放。支持安卓共享以添加媒体内容，或网址链接的媒体。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0070'>应用程序</a></p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>媒体设置用户界面-数库列项</h2>
+					<div class="media">
+            <image src="./img/hymnchtv_media_record_list.png"/>
+						<p>显示数据库中保存的所有用户的媒体记录列表。该列表仅显示当前选择的诗歌类别媒体记录。页面标题指示数据库中的记录数。</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>媒体设置用户界面-富文本编辑器</h2>
+					<div class="media">
+            <image src="./img/hymnchtv_rich_editor.png"/>
+						<p>进行导出操作后，实际创建的文件名将显示在数据库导入文件字段中，并启动富文本编辑器，插入文件内容以供用户验证和更正。修改后，单击确认以保存更改。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0080'>应用程序</a></p>
 					</div>
 				</li>
 
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>关于书拉密女诗歌应用程序</h2>
 					<div class="media">
-          <image src="./img/13.hymnchtv_about.png"/>
+            <image src="./img/13.hymnchtv_about.png"/>
 						<p>关于书拉密女诗歌程序界面。选择历史记录以查看应用程序发布记录日志</p>
 					</div>
 				</li>
@@ -198,7 +229,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>书拉密女诗歌应用程序主菜单选项</h2>
 					<div class="media">
-          <image src="./img/14.hymnchtv_option_menu.png"/>
+            <image src="./img/14.hymnchtv_option_menu.png"/>
 						<p>用户可选的主菜单选项包括墙纸，字体大小，字体颜色，访问网上帮助以及关于书拉密女诗歌应用程序</p>
 					</div>
 				</li>
