--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -61,7 +61,7 @@
     <h2>特征和工能</h2>
     <h3>书拉密女小站-诗歌本: 为安卓设计的赞美诗歌词页面浏览器,查看和播放器</h3>
     <ul>
-      <li>使用最新的 Android Fragment Pager Adapter 进行平滑滚动更顺畅</li>
+      <li>使用最新的 Android Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
       <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
       <li>最大搜索为100项，显示匹配结果的4行完整诗词句</li>
@@ -197,7 +197,10 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户定义媒体设置用户界面</h2>
 					<div class="media">
-            <image src="./img/hymnchtv_media_config.png"/>
+ 						<video id="media_content" poster="./img/hymnchtv_media_config.png" controls>
+							<source src="./video/mediaconfig_01.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
 						<p>支持对用户定义媒体内容，即每个诗歌标题的视频和音频以进行播放。支持安卓共享以添加媒体内容，或网址链接的媒体。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0070'>应用程序</a></p>
 					</div>
 				</li>
@@ -205,7 +208,10 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>媒体设置用户界面-数库列项</h2>
 					<div class="media">
-            <image src="./img/hymnchtv_media_record_list.png"/>
+ 						<video id="media_content" poster="./img/hymnchtv_media_record_list.png" controls>
+							<source src="./video/mediaconfig_02.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
 						<p>显示数据库中保存的所有用户的媒体记录列表。该列表仅显示当前选择的诗歌类别媒体记录。页面标题指示数据库中的记录数。</p>
 					</div>
 				</li>
