add hymn history and exo player

--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -84,6 +84,7 @@
       <li>用户可选的主界面包括预定或用户定义的墙纸，字体大小，字体颜色</li>
       <li>集成的图像编辑器具有功能，用户可以轻松更新墙纸</li>
       <li>在线英文歌词显示</li>
+      <li>添加对最近诗歌历史记录选择的支持</li>
       <li>自动检查版本更新，并通知用户任何新的更新以采取措施</li>   
       <li>请检阅 <a style="color:blue"; href='./faq.html'>诗歌本新应用程序功能</a></li>
 	</ul>
@@ -222,6 +223,22 @@
 					<div class="media">
             <image src="./img/hymnchtv_rich_editor.png"/>
 						<p>进行导出操作后，实际创建的文件名将显示在数据库导入文件字段中，并启动富文本编辑器，插入文件内容以供用户验证和更正。修改后，单击确认以保存更改。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0080'>应用程序</a></p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>用户定义的媒体播放于内置播放器</h2>
+					<div class="media">
+            <image src="./img/hymnchtv_exo_player.png"/>
+						<p>用户定义媒体后，进入歌词显示页面并选择媒体类型。 单击播放按钮，开始用内置播放器进行播放。</p>
+					</div>
+				</li>
+
+				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
+					<h2>最近诗歌历史记录选择支持</h2>
+					<div class="media">
+            <image src="./img/hymnchtv_hymn_history.png"/>
+						<p>只需单击 [输入诗歌编号&#11015;] 显示位置，即可显示最近诗歌选择历史。然后选择诗歌编号项目进入。列表首先显示最近选择的诗歌编号。</p>
 					</div>
 				</li>
 
