--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -246,7 +246,7 @@
 					<h2>关于书拉密女诗歌应用程序</h2>
 					<div class="media">
             <image src="./img/13.hymnchtv_about.png"/>
-						<p>关于书拉密女诗歌程序界面。选择历史记录以查看应用程序发布记录日志</p>
+						<p>关于书拉密女诗歌程序界面。选择历史记录以查看应用程序发布记录日志。如果遇到应用程序问题，可以提交错误报告。</p>
 					</div>
 				</li>
 
