--- a/atalk/index.html
+++ b/atalk/index.html
@@ -250,7 +250,7 @@
 							<source src="">
 							Your browser does not support the video tag.
 						</video>
-						<p>aTalk telephny UI - no demo video available</p>
+						<p>aTalk telephny UI. See <a href="https://atalk.sytes.net/atalk/faq.html#media_04">Jabber VoIP-PBX gateway Telephony (experimental)</a></p>
 					</div>
 				</li>
 
